--- a/index.html
+++ b/index.html
@@ -2,50 +2,89 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Acidalchamy's Bots</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Discord Translator</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            text-align: center;
-            padding: 10px;
-        }
-        section {
-            margin: 20px;
-            padding: 20px;
-            background-color: #fff;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        p {
-            margin-bottom: 20px;
-        }
-        a {
-            color: #4CAF50;
-            text-decoration: none;
+        /* Custom Styles */
+        .hero-section {
+            background-color: #f9f9f9; /* Light grey background */
+            padding: 50px 0; /* Vertical padding */
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Acidalchamy's Bot Services</h1>
-    </header>
-    <section>
-        <h2>About This Platform</h2>
-        <p>
-            Welcome to Acidalchamy's Bot Services. This platform serves as a centralized location for exploring and integrating various bots designed to enhance your digital experience. From media-rich engagements to language translation, our bots offer sophisticated features to meet a diverse set of needs.
-        </p>
-        <p>
-            Whether you are managing a multi-lingual Discord community or interested in effortlessly decoding binary messages, our bots are designed to deliver performance and ease of use. 
-        </p>
-        <h2>Available Bots </h2>
-    </section>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Discord Translator</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#faq">FAQ</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!-- Hero Section -->
+<section class="hero-section text-center">
+    <div class="container">
+        <h1>Hello, World Citizens! 🌍</h1>
+        <p class="lead">Break down language barriers effortlessly in your Discord server with Discord Translator.</p>
+        <a href="https://discord.com/oauth2/authorize?client_id=1148005265434759319&permissions=139586817024&scope=bot" class="btn btn-primary btn-lg">Invite to Discord</a>
+    </div>
+</section>
+
+<!-- Features Section -->
+<section class="container my-5">
+    <h2 class="text-center mb-4">Key Features</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <h4>Real-Time Translation</h4>
+            <p>Automatically translate messages in multiple languages without any manual intervention.</p>
+        </div>
+        <div class="col-md-4">
+            <h4>Language Detection</h4>
+            <p>Our bot can detect the language of a message and translate it accordingly.</p>
+        </div>
+        <div class="col-md-4">
+            <h4>Flexible Settings</h4>
+            <p>Customize your language preferences per user or server-wide with simple commands.</p>
+        </div>
+    </div>
+</section>
+
+<!-- Tutorial Section -->
+<section class="container my-5">
+    <h2 class="text-center mb-4">How to Get Started</h2>
+    <ol>
+        <li>Click the 'Invite to Discord' button above to add the bot to your server.</li>
+        <li>Use the command <code>!TranslatorBot help</code> to configure language preferences.</li>
+        <li>Sit back and let Discord Translator do the work. Enjoy seamless conversations!</li>
+    </ol>
+</section>
+
+<!-- Privacy Section -->
+<section class="container my-5">
+    <h2 class="text-center mb-4">Privacy Matters</h2>
+    <p>We value your privacy. Discord Translator only stores data that is essential for its functionality and deletes any translation data after a short period.</p>
+</section>
+
+<!-- Footer -->
+<footer class="footer mt-auto py-3 bg-dark text-white text-center">
+    <p>© 2023 Discord Translator | <a href="https://github.com/your-username">GitHub</a> | <a href="https://twitter.com/your-handle">Twitter</a></p>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </body>
 </html>
