--- a/about.html
+++ b/about.html
@@ -37,16 +37,16 @@
 <section class="container my-5">
     <h2>About Discord Translator</h2>
     <p>
-        Welcome to Discord Translator, your friendly multilingual assistant in the Discord universe! Born from the idea of a more inclusive and connected world, our bot helps break down language barriers by translating messages in real-time.
+        Discord Translator was born out of a need to bridge communication gaps within the diverse Discord community. The seed of this idea was planted when a friend showcased a tool that facilitated translation within Discord, sparking the inspiration to make Discord Translator Bot.
     </p>
     <img src="path-to-image.png" alt="About Image" class="img-fluid mb-3">
-    <h3>Meet the Developers</h3>
+    <h3>The Journey</h3>
     <p>
-        We are a team of passionate developers who believe in the power of communication. With backgrounds in computer science and linguistics, we combined our skills to make Discord a more inclusive space.
+        From annotating the initial program written in .ahk to converting it into Python, the process of creating this bot was exhilarating. Its capabilities have evolved, becoming feature-rich while ensuring user privacy at its core.
     </p>
-    <h3>Our Inspiration</h3>
+    <h3>About the Developer</h3>
     <p>
-        Our inspiration comes from the diverse and ever-growing Discord community. We realized that language should not be a barrier to friendship or knowledge-sharing. Thus, Discord Translator was born to make conversations seamless, no matter where you're from or what language you speak.
+        My name is Chris R, and I developed Discord Translator as a passion project in my spare time. Hailing from Sweden and proficient in multiple languages, I've always been aware of the nuances and barriers of communication. My mission is to make interactions on Discord as seamless as possible, eradicating language barriers. If you have any concerns, suggestions, or feedback, I'm always open to hearing them. 
     </p>
 </section>
 
