--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="faq.html">FAQ</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="donations.html">Donations</a>
+            </li>
         </ul>
     </div>
 </nav>
