Updates to Images

--- a/faq.html
+++ b/faq.html
@@ -31,6 +31,10 @@
     </div>
 </nav>
 
+<!-- After your <nav> element -->
+    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:0; right:0; width:100px;">
+
+
 <!-- FAQ Section -->
 <section class="container my-5">
     <h2>Frequently Asked Questions</h2>
