--- a/donations.html
+++ b/donations.html
@@ -37,7 +37,7 @@
 </nav>
 
 <!-- After your <nav> element -->
-    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:0; right:0; width:100px;">
+    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px;">
 
 
 <!-- Donate Section -->
