--- a/donations.html
+++ b/donations.html
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="donations.html">Donations</a>
+                <a class="nav-link" href="donations.html">Donations</a>
             </li>
         </ul>
     </div>
