--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
     </div>
 </nav>
 
-<!-- After your <nav> element -->
-    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
-
 
 <!-- Hero Section -->
 <section class="hero-section text-center">
     <div class="container">
-        <h1>Hello, World Citizens! 🌍</h1>
+        <h1>Hello, World Citizens! <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="width:50px;"></h1>
         <p class="lead">Break down language barriers effortlessly in your Discord server with Discord Translator.</p>
         <a href="https://discord.com/oauth2/authorize?client_id=1148005265434759319&permissions=139586817024&scope=bot" class="btn btn-primary btn-lg">Invite to Discord</a>
     </div>
