--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
 
 <!-- About Section -->
-<section class="container my-5">
+<section class="container my-5" style="padding-top: 120px";>
     <h2>About Discord Translator</h2>
     <p>
         Discord Translator was born out of a need to bridge communication gaps within the diverse Discord community. The seed of this idea was planted when a friend showcased a tool that facilitated translation within Discord, sparking the inspiration to make Discord Translator Bot.
