--- a/donations.html
+++ b/donations.html
@@ -41,7 +41,7 @@
 
 
 <!-- Donate Section -->
-<section class="donate-section text-center">
+<section class="donate-section text-center" style="padding-top: 120px";>
     <div class="container">
         <h1>Support Discord Translator</h1>
         <p>Your donations help us keep the project alive and running. Thank you for your support!</p>
