--- a/faq.html
+++ b/faq.html
@@ -39,7 +39,7 @@
 
 
 <!-- FAQ Section -->
-<section class="container my-5">
+<section class="container my-5" style="padding-top: 120px";>
     <h2>Frequently Asked Questions</h2>
 
     <div class="faq-item">
