--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <style>
         /* Custom Styles */
         .hero-section {
-            background-color: #f9f9f9; /* Light grey background */
+            /* New Background Image Styles */
+            background-image: url('https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_816f6fc3-33ab-4351-95c8-88fb2dfb94fb.jpg?raw=true');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
             padding: 50px 0; /* Vertical padding */
+            color: white; /* Changing text color to white for better visibility */
         }
     </style>
 </head>
@@ -35,7 +40,6 @@
         </ul>
     </div>
 </nav>
-
 
 <!-- Hero Section -->
 <section class="hero-section text-center">
