--- a/donations.html
+++ b/donations.html
@@ -37,15 +37,14 @@
 </nav>
 
 <!-- After your <nav> element -->
-    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
-
+<img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
 
 <!-- Donate Section -->
-<section class="donate-section text-center" style="padding-top: 120px";>
+<section class="donate-section text-center" style="padding-top: 120px;">
     <div class="container">
         <h1>Support Discord Translator</h1>
         <p>Your donations help us keep the project alive and running. Thank you for your support!</p>
-        
+
         <!-- PayPal -->
         <div class="mb-4">
             <a href="https://paypal.me/AcidAlchamy" class="btn btn-primary btn-lg">Donate via PayPal</a>
@@ -58,15 +57,15 @@
 
         <!-- Bitcoin Network -->
         <div class="mt-4 mb-4">
-            <span>Bitcoin Address: </span>
-            <input type="text" value="bc1q9hkvqjnxlexn9hqj9feuxl0lxc0ew9crxf9yld" id="btc-address" readonly>
+            <span>Bitcoin Address: </span><br>
+            <input type="text" value="bc1q9hkvqjnxlexn9hqj9feuxl0lxc0ew9crxf9yld" id="btc-address" readonly><br>
             <button onclick="copyToClipboard('btc-address')" class="btn btn-info">Copy Address</button>
         </div>
 
         <!-- Bitcoin Lightning Network -->
         <div class="mt-4 mb-4">
-            <span>Bitcoin Lightning Address: </span>
-            <input type="text" value="lnbc1pj37jz6dqdgdshx6pqg9c8qpp5ldvchsdur9zumrjuk8j4jpkzem2vdsq3h7au3au9jl0upafsf8jssp5cay3w0lat373vfw95qx3tj7sjz2qpaar4p4uv9ad8hgq93plzujs9qrsgqc qpcxqy8ayqrzjqv06k0m23t593pngl0jt7n9wznp64fqngvctz7vts8nq4tukvtljqrqsgcqqyrqqqgqqqqqqqqqqqqq9grzjqtsjy9p55gdceevp36fvdmrkxqvzfhy8ak2tg c5zgtjtra9xlaz97rqjpqqq8gcqqgqqqqqqqqqqqq9g7peyvgys6qezz8f8n0hvrxxfpdz9tfyyndaxm2mzvr4wqe8a2nlpjfw9x3pmasv8kht9ygs4fntveqqp22ujnt8caztvn6c 5wu6damgpfpeapj" id="btc-ln-address" readonly>
+            <span>Bitcoin Lightning Address: </span><br>
+            <input type="text" value="lnbc1pj37jz6dqdgdshx6pqg9c8qpp5ldvchsdur9zumrjuk8j4jpkzem2vdsq3h7au3au9jl0upafsf8jssp5cay3w0lat373vfw95qx3tj7sjz2qpaar4p4uv9ad8hgq93plzujs9qrsgqc qpcxqy8ayqrzjqv06k0m23t593pngl0jt7n9wznp64fqngvctz7vts8nq4tukvtljqrqsgcqqyrqqqgqqqqqqqqqqqqq9grzjqtsjy9p55gdceevp36fvdmrkxqvzfhy8ak2tg c5zgtjtra9xlaz97rqjpqqq8gcqqgqqqqqqqqqqqq9g7peyvgys6qezz8f8n0hvrxxfpdz9tfyyndaxm2mzvr4wqe8a2nlpjfw9x3pmasv8kht9ygs4fntveqqp22ujnt8caztvn6c 5wu6damgpfpeapj" id="btc-ln-address" readonly><br>
             <button onclick="copyToClipboard('btc-ln-address')" class="btn btn-info">Copy Address</button>
         </div>
 
@@ -86,8 +85,6 @@
         alert("Copied: " + copyText.value);
     }
 </script>
-
-
 
 <!-- Footer -->
 <footer class="footer mt-auto py-3 bg-dark text-white text-center">
