--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
-            padding: 50px 0; /* Vertical padding */
+            padding: 30px 0; /* Reduced vertical padding */
             color: white; /* Changing text color to white for better visibility */
         }
     </style>
