--- a/faq.html
+++ b/faq.html
@@ -39,16 +39,17 @@
 
 
 <!-- FAQ Section -->
-<section class="container my-5" style="padding-top: 120px";>
+<section class="container my-5" style="padding-top: 120px;">
     <h2>Frequently Asked Questions</h2>
-    <!-- After your <nav> element -->
-        <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_25903a0f-5b28-49bc-8763-351ef54d12bc.png?raw=true" alt="FAQ logo" style="position:absolute; top:50px; left:0; width:100px; margin-bottom:20px;">
-
+    <!-- Image under the FAQ title -->
+    <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_25903a0f-5b28-49bc-8763-351ef54d12bc.png?raw=true" alt="FAQ logo" style="width:100px; margin-bottom:20px;">
 
     <div class="faq-item">
         <h4>How do I find a User ID or Channel ID?</h4>
         <p>In Discord, go to your settings > Appearance and turn on 'Developer Mode'. Now you can right-click on a channel or user to copy their ID.</p>
     </div>
+</section>
+
     
     <!-- Basic Setup -->
     <div class="faq-item">
