--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,10 @@
         .faq-item {
             margin-bottom: 30px;
         }
+        /* New Style for li */
+        .purple-bg {
+            background-color: #E6E6FA; /* Light purple */
+        }
     </style>
 </head>
 <body>
@@ -55,9 +59,9 @@
         <h4>How do I set up TranslatorBot for my server?</h4>
         <p>Use the `!TranslatorBot setup` command with the appropriate arguments. Only an administrator can run this command. Example: `!TranslatorBot setup 123456789 987654321 en`.</p>
         <ul>
-            <li><strong>123456789</strong>: This is the server ID where you want to set up the bot.</li>
-            <li><strong>987654321</strong>: This is the channel ID where the bot will send translations.</li>
-            <li><strong>en</strong>: This is the default language code for translations (e.g., 'en' for English).</li>
+            <li class="purple-bg"><strong>123456789</strong>: This is the server ID where you want to set up the bot.</li>
+            <li class="purple-bg"><strong>987654321</strong>: This is the channel ID where the bot will send translations.</li>
+            <li class="purple-bg"><strong>en</strong>: This is the default language code for translations (e.g., 'en' for English).</li>
         </ul>
     </div>
 
@@ -66,7 +70,7 @@
         <h4>How do I set the default language for the server?</h4>
         <p>Use the `!TranslatorBot setlangGlobal` command. Only an administrator can run this command. Example: `!TranslatorBot setlangGlobal en`.</p>
         <ul>
-            <li><strong>en</strong>: This sets the default language for the server to English.</li>
+            <li class="purple-bg"><strong>en</strong>: This sets the default language for the server to English.</li>
         </ul>
     </div>
 
@@ -74,7 +78,7 @@
         <h4>How can I set my preferred language for translations?</h4>
         <p>Use the `!TranslatorBot setlang` command. Example: `!TranslatorBot setlang es`.</p>
         <ul>
-            <li><strong>es</strong>: This sets your preferred language to Spanish.</li>
+            <li class="purple-bg"><strong>es</strong>: This sets your preferred language to Spanish.</li>
         </ul>
     </div>
 
@@ -83,9 +87,9 @@
         <h4>How can I watch a user's messages in a specific channel for translations?</h4>
         <p>Use the `!TranslatorBot addChannel` command. Example: `!TranslatorBot addChannel 123456789 987654321 en`.</p>
         <ul>
-            <li><strong>123456789</strong>: This is the channel ID where you want to watch the user's messages.</li>
-            <li><strong>987654321</strong>: This is the user ID whose messages you want to watch.</li>
-            <li><strong>en</strong>: This sets the language in which messages will be translated.</li>
+            <li class="purple-bg"><strong>123456789</strong>: This is the channel ID where you want to watch the user's messages.</li>
+            <li class="purple-bg"><strong>987654321</strong>: This is the user ID whose messages you want to watch.</li>
+            <li class="purple-bg"><strong>en</strong>: This sets the language in which messages will be translated.</li>
         </ul>
     </div>
 
@@ -93,9 +97,9 @@
         <h4>How can I stop watching a user's messages in a specific channel for translations?</h4>
         <p>Use the `!TranslatorBot removeChannel` command. Example: `!TranslatorBot removeChannel 123456789 987654321 en`.</p>
         <ul>
-            <li><strong>123456789</strong>: This is the channel ID where you were watching the user's messages.</li>
-            <li><strong>987654321</strong>: This is the user ID whose messages you want to stop watching.</li>
-            <li><strong>en</strong>: This is the language in which messages were being translated.</li>
+            <li class="purple-bg"><strong>123456789</strong>: This is the channel ID where you were watching the user's messages.</li>
+            <li class="purple-bg"><strong>987654321</strong>: This is the user ID whose messages you want to stop watching.</li>
+            <li class="purple-bg"><strong>en</strong>: This is the language in which messages were being translated.</li>
         </ul>
     </div>
 
@@ -103,8 +107,8 @@
         <h4>How can I start watching a specific user for translations?</h4>
         <p>Use the `!TranslatorBot TranslateUser` command. Example: `!TranslatorBot TranslateUser 987654321 en`.</p>
         <ul>
-            <li><strong>987654321</strong>: This is the user ID whose messages you want to watch for translations.</li>
-            <li><strong>en</strong>: This sets the language in which their messages will be translated.</li>
+            <li class="purple-bg"><strong>987654321</strong>: This is the user ID whose messages you want to watch for translations.</li>
+            <li class="purple-bg"><strong>en</strong>: This sets the language in which their messages will be translated.</li>
         </ul>
     </div>
 
@@ -113,7 +117,7 @@
         <h4>How can I view my current settings?</h4>
         <p>Use the `!TranslatorBot printSettings` command. Example: `!TranslatorBot printSettings`.</p>
         <ul>
-            <li><strong>No parameters required</strong>: This command will output your current settings.</li>
+            <li class="purple-bg"><strong>No parameters required</strong>: This command will output your current settings.</li>
         </ul>
     </div>
 
@@ -121,7 +125,7 @@
         <h4>How can an administrator view the current bot settings?</h4>
         <p>Use the `!TranslatorBot printAdminSettings` command. Only an administrator can run this command. Example: `!TranslatorBot printAdminSettings`.</p>
         <ul>
-            <li><strong>No parameters required</strong>: This command will output the current bot settings for the server.</li>
+            <li class="purple-bg"><strong>No parameters required</strong>: This command will output the current bot settings for the server.</li>
         </ul>
     </div>
 
@@ -130,7 +134,7 @@
         <h4>How can I prevent my messages from being translated?</h4>
         <p>Use the `!TranslatorBot Blacklist` command to add yourself to the translation blacklist. Example: `!TranslatorBot Blacklist`.</p>
         <ul>
-            <li><strong>No parameters required</strong>: This command will add you to the translation blacklist.</li>
+            <li class="purple-bg"><strong>No parameters required</strong>: This command will add you to the translation blacklist.</li>
         </ul>
     </div>
 
@@ -138,7 +142,7 @@
         <h4>How can I remove myself from the translation blacklist?</h4>
         <p>Use the `!TranslatorBot unBlacklist` command. Example: `!TranslatorBot unBlacklist`.</p>
         <ul>
-            <li><strong>No parameters required</strong>: This command will remove you from the translation blacklist.</li>
+            <li class="purple-bg"><strong>No parameters required</strong>: This command will remove you from the translation blacklist.</li>
         </ul>
     </div>
 
@@ -146,7 +150,7 @@
         <h4>How can I stop being watched for translations by other users?</h4>
         <p>Use the `!TranslatorBot unWatchMe` command. Example: `!TranslatorBot unWatchMe`.</p>
         <ul>
-            <li><strong>No parameters required</strong>: This command will stop other users from watching you for translations.</li>
+            <li class="purple-bg"><strong>No parameters required</strong>: This command will stop other users from watching you for translations.</li>
         </ul>
     </div>
 
@@ -154,7 +158,7 @@
         <h4>How can I prevent a specific user from watching me for translations?</h4>
         <p>Use the `!TranslatorBot preventWatch` command. Example: `!TranslatorBot preventWatch 987654321`.</p>
         <ul>
-            <li><strong>987654321</strong>: This is the user ID that you want to prevent from watching you for translations.</li>
+            <li class="purple-bg"><strong>987654321</strong>: This is the user ID that you want to prevent from watching you for translations.</li>
         </ul>
     </div>
 
@@ -162,7 +166,7 @@
         <h4>How can I see who is watching me for translations?</h4>
         <p>Use the `!TranslatorBot WhoIsWatchingMe` command. Example: `!TranslatorBot WhoIsWatchingMe`.</p>
         <ul>
-            <li><strong>No parameters required</strong>: This command will display a list of users who are watching you for translations.</li>
+            <li class="purple-bg"><strong>No parameters required</strong>: This command will display a list of users who are watching you for translations.</li>
         </ul>
     </div>
 
@@ -170,7 +174,7 @@
         <h4>How can I stop watching a specific user for translations?</h4>
         <p>Use the `!TranslatorBot UnwatchUser` command. Example: `!TranslatorBot UnwatchUser 987654321`.</p>
         <ul>
-            <li><strong>987654321</strong>: This is the user ID that you want to stop watching for translations.</li>
+            <li class="purple-bg"><strong>987654321</strong>: This is the user ID that you want to stop watching for translations.</li>
         </ul>
     </div>
 
