--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Translator</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Custom Styles */
         .hero-section {
-            /* New Background Image Styles */
             background-image: url('https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_816f6fc3-33ab-4351-95c8-88fb2dfb94fb.jpg?raw=true');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
-            padding: 30px 0; /* Reduced vertical padding */
-            color: white; /* Changing text color to white for better visibility */
+            padding: 30px 0;
+            color: white;
+        }
+        .feature-icon {
+            font-size: 40px;
+            color: #007bff;
+        }
+        .bg-light-blue {
+            background-color: #f1f9ff;
         }
     </style>
 </head>
@@ -51,18 +58,21 @@
 </section>
 
 <!-- Features Section -->
-<section class="container my-5">
+<section class="container my-5 bg-light-blue">
     <h2 class="text-center mb-4">Key Features</h2>
-    <div class="row">
+    <div class="row text-center">
         <div class="col-md-4">
+            <i class="fas fa-globe feature-icon"></i>
             <h4>Real-Time Translation</h4>
             <p>Automatically translate messages in multiple languages without any manual intervention.</p>
         </div>
         <div class="col-md-4">
+            <i class="fas fa-search feature-icon"></i>
             <h4>Language Detection</h4>
             <p>Our bot can detect the language of a message and translate it accordingly.</p>
         </div>
         <div class="col-md-4">
+            <i class="fas fa-cogs feature-icon"></i>
             <h4>Flexible Settings</h4>
             <p>Customize your language preferences per user or server-wide with simple commands.</p>
         </div>
@@ -80,15 +90,13 @@
 </section>
 
 <!-- Privacy Section -->
-<section class="container my-5">
+<section class="container my-5 bg-light-blue">
     <h2 class="text-center mb-4">Privacy Matters</h2>
     <p>We value your privacy. Discord Translator only stores data that is essential for its functionality and deletes any translation data after a short period.</p>
 </section>
 
 <!-- Footer -->
-<footer class="footer mt-auto py-3 bg-dark text-white text-center">
-    <p>© 2023 Discord Translator | <a href="https://github.com/your-username">GitHub</a> | <a href="https://twitter.com/your-handle">Twitter</a></p>
-</footer>
+<!-- ... (Same as before) -->
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
