--- a/donations.html
+++ b/donations.html
@@ -73,7 +73,7 @@
             <!-- Bitcoin Lightning Network -->
             <div class="mt-4 mb-4">
                 <span><i class="fas fa-bolt"></i> Bitcoin Lightning Address: </span><br>
-                <input type="text" value="lnbc1..." id="btc-ln-address" readonly><br>
+                <input type="text" value="lnbc1pj37jz6dqdgdshx6pqg9c8qpp5ldvchsdur9zumrjuk8j4jpkzem2vdsq3h7au3au9jl0upafsf8jssp5cay3w0lat373vfw95qx3tj7sjz2qpaar4p4uv9ad8hgq93plzujs9qrsgqc qpcxqy8ayqrzjqv06k0m23t593pngl0jt7n9wznp64fqngvctz7vts8nq4tukvtljqrqsgcqqyrqqqgqqqqqqqqqqqqq9grzjqtsjy9p55gdceevp36fvdmrkxqvzfhy8ak2tg c5zgtjtra9xlaz97rqjpqqq8gcqqgqqqqqqqqqqqq9g7peyvgys6qezz8f8n0hvrxxfpdz9tfyyndaxm2mzvr4wqe8a2nlpjfw9x3pmasv8kht9ygs4fntveqqp22ujnt8caztvn6c 5wu6damgpfpeapj" id="btc-ln-address" readonly><br>
                 <button onclick="copyToClipboard('btc-ln-address')" class="btn btn-info">Copy Address</button>
             </div>
     
