--- a/about.html
+++ b/about.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Discord Translator</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* Custom Styles */
-        .hero-section {
+        .section-bg {
             background-color: #f9f9f9; /* Light grey background */
             padding: 50px 0; /* Vertical padding */
+        }
+        .icon-heading {
+            font-size: 40px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -39,22 +44,21 @@
 <!-- After your <nav> element -->
     <img src="https://github.com/AcidAlchamy/DiscordTranslator/blob/main/images/_3b409703-4bc5-4cea-9c17-dbbb79116ff8.png?raw=true" alt="Your Logo" style="position:absolute; top:50px; right:0; width:100px; margin-bottom:20px;">
 
-
-<!-- About Section -->
-<section class="container my-5" style="padding-top: 120px";>
-    <h2>About Discord Translator</h2>
-    <p>
-        Discord Translator was born out of a need to bridge communication gaps within the diverse Discord community. The seed of this idea was planted when a friend showcased a tool that facilitated translation within Discord, sparking the inspiration to make Discord Translator Bot.
-    </p>
-    <h3>The Journey</h3>
-    <p>
-        From annotating the initial program written in .ahk to converting it into Python, the process of creating this bot was exhilarating. Its capabilities have evolved, becoming feature-rich while ensuring user privacy at its core.
-    </p>
-    <h3>About the Developer</h3>
-    <p>
-        My name is Chris R, and I developed Discord Translator as a passion project in my spare time. Hailing from Sweden and proficient in multiple languages, I've always been aware of the nuances and barriers of communication. My mission is to make interactions on Discord as seamless as possible, eradicating language barriers. If you have any concerns, suggestions, or feedback, I'm always open to hearing them. 
-    </p>
-</section>
+    <!-- About Section -->
+    <section class="container my-5 section-bg" style="padding-top: 120px;">
+        <h2><i class="fas fa-info-circle icon-heading"></i> About Discord Translator</h2>
+        <p>
+            Discord Translator was born out of a need to bridge communication gaps within the diverse Discord community. The seed of this idea was planted when a friend showcased a tool that facilitated translation within Discord, sparking the inspiration to make Discord Translator Bot.
+        </p>
+        <h3><i class="fas fa-route icon-heading"></i> The Journey</h3>
+        <p>
+            From annotating the initial program written in .ahk to converting it into Python, the process of creating this bot was exhilarating. Its capabilities have evolved, becoming feature-rich while ensuring user privacy at its core.
+        </p>
+        <h3><i class="fas fa-user icon-heading"></i> About the Developer</h3>
+        <p>
+            My name is Chris R, and I developed Discord Translator as a passion project in my spare time. Hailing from Sweden and proficient in multiple languages, I've always been aware of the nuances and barriers of communication. My mission is to make interactions on Discord as seamless as possible, eradicating language barriers. If you have any concerns, suggestions, or feedback, I'm always open to hearing them. 
+        </p>
+    </section>
 
 <!-- Footer -->
 <footer class="footer mt-auto py-3 bg-dark text-white text-center">
