--- a/faq.html
+++ b/faq.html
@@ -59,8 +59,8 @@
         <h4>How do I set up TranslatorBot for my server?</h4>
         <p>Use the `!TranslatorBot setup` command with the appropriate arguments. Only an administrator can run this command. Example: `!TranslatorBot setup 123456789 987654321 en`.</p>
         <ul>
-            <li class="purple-bg"><strong>123456789</strong>: This is the server ID where you want to set up the bot.</li>
-            <li class="purple-bg"><strong>987654321</strong>: This is the channel ID where the bot will send translations.</li>
+            <li class="purple-bg"><strong>123456789</strong>: This is the admin channel ID where you want to set up the bot.</li>
+            <li class="purple-bg"><strong>987654321</strong>: This is the bot channel ID where the bot will send translations.</li>
             <li class="purple-bg"><strong>en</strong>: This is the default language code for translations (e.g., 'en' for English).</li>
         </ul>
     </div>
