--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 $('#serverCount').text(data.serverCount);
                 $('#watcherCount').text(data.watcherCount);
                 $('#watchedCount').text(data.watchedCount);  // New line
+                $('#translationCount').text(data.translationCount);  // New line to display translation count
             },
             error: function(error) {
                 console.log('Error:', error);
